added animation for better experience

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <span>&#128514;</span>
+        <span class="rotate">&#128514;</span>
         <p id="joke"></p>
-        <button id="btn">Get Random Joke</button>
+        <footer>
+            <button id="btn">Get Random Joke</button>
+        </footer>
     </div>
 
     <!-- Script -->
